# Terra

./: .gitignore  Cargo.toml  INTEGRATION_TESTING.md  README.md  _config.yml  docker-compose.test.yml  index.html  run-integration-tests.sh  script.js  simple-integration-test.sh  styles.css  validate-cdk.sh  validate-ci-setup.sh  validate-setup.sh
.github/workflows/: ci.yml  deploy-cdk.yml  integration-tests.yml  pages.yml
backend/: Cargo.toml  Dockerfile.api-manufacturers  Dockerfile.api-rfqs  Dockerfile.api-uploads  Makefile  README.md  template.yaml
backend/crates/application/: Cargo.toml
backend/crates/application/src/: dto.rs  lib.rs  ports.rs  services.rs  tests.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: entities.rs  error.rs  events.rs  lib.rs  tests.rs  value_objects.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/src/: config.rs  lib.rs  s3.rs  ses.rs  tests.rs
backend/crates/presentation/: Cargo.toml
backend/crates/presentation/src/: error.rs  handlers.rs  lib.rs  middleware.rs  tests.rs  validation.rs
backend/lambdas/api_manufacturers/: Cargo.toml
backend/lambdas/api_manufacturers/src/: main.rs
backend/lambdas/api_rfqs/: Cargo.toml
backend/lambdas/api_rfqs/src/: main.rs
backend/lambdas/api_uploads/: Cargo.toml
backend/lambdas/api_uploads/src/: main.rs
backend/lambdas/image_ingest/: Cargo.toml
backend/lambdas/image_ingest/src/: main.rs
backend/lambdas/publisher/: Cargo.toml
backend/lambdas/publisher/src/: main.rs
backend/src/: auth.rs  config.rs  db.rs  errors.rs  handlers.rs  lib.rs  models.rs  services.rs  utils.rs
backend/src/lambdas/: products.rs
docs/: CDK_DEPLOYMENT.md  mvp_design.md
frontend/: .env.development  Dockerfile.dev  astro.config.mjs  package-lock.json  package.json
frontend/public/: .nojekyll  index.html
frontend/public/js/: prefetch.js
frontend/src/: App.css  App.tsx
frontend/src/components/: FilterControls.svelte  Header.tsx  HomePage.tsx  ManufacturerCard.astro  ManufacturerDetail.tsx  ManufacturerList.tsx  RFQDetail.tsx  SubmitRFQ.tsx
frontend/src/data/: manufacturers.ts
frontend/src/layouts/: BaseLayout.astro
frontend/src/pages/: index.astro
frontend/src/pages/api/: categories.json.ts
frontend/src/pages/catalog/: [...category].astro
frontend/src/pages/catalog/additive/: index.astro
frontend/src/pages/catalog/electronics/: index.astro
frontend/src/pages/catalog/fabrication/: index.astro
frontend/src/pages/catalog/machining/: index.astro
frontend/src/pages/catalog/manufacturer/: [id].astro
frontend/src/pages/catalog/molding/: index.astro
frontend/src/pages/rfq/: submit.astro
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/utils/: prefetch.js
infra/: cdk.json  package-lock.json  package.json
infra/data/: categories.json  generate-catalog.js  manufacturers.json
infra/data/catalog/category/: additive.json  electronics.json  fabrication.json  machining.json  molding.json
infra/data/manufacturer/: advanced-molding-systems.json  industrial-metal-fabricators.json  precision-aerospace-cnc.json  precision-electronics-assembly.json  rapid-additive-solutions.json
infra/lib/: terra-stack.d.ts  terra-stack.js  terra-stack.ts
infra/test/: terra-stack.test.js  terra-stack.test.ts
scripts/: pre-commit-hook.sh  setup-hooks.sh
tests/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.js  setup-ci-test-data.js  setup-test-data.js
tests/playwright-report/: index.html
tests/test-results/: .last-run.json
tests/tests/: api-integration.spec.js  catalog.spec.js  homepage.spec.js  manufacturer-details.spec.js  rfq-form.spec.js  s3-prefetch.spec.js
