[workspace]
resolver = "2"
members = [
    "backend/crates/domain",
    "backend/crates/application", 
    "backend/crates/infrastructure",
    "backend/crates/presentation",
    "backend/lambdas/api_uploads",
    "backend/lambdas/api_rfqs", 
    "backend/lambdas/api_manufacturers",
    "backend/lambdas/image_ingest",
    "backend/lambdas/publisher"
]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# AWS SDK
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.0"
aws-sdk-sesv2 = "1.0"

# Lambda
lambda_runtime = "0.8"
lambda-web = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Image processing  
image = "0.24"
fast_image_resize = "3.0"

# Validation
jsonschema = "0.17"
regex = "1.10"

# Crypto
sha2 = "0.10"
base64 = "0.21"