[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sesv2 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"