[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
lambda_web = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
jsonschema = { workspace = true }