[package]
name = "image_ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
domain = { path = "../../crates/domain" }
application = { path = "../../crates/application" }
infrastructure = { path = "../../crates/infrastructure" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
fast_image_resize = { workspace = true }